# git-repo-sizer

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: constants.py  main.py  models.py  utils.py
app/view/: constants.py  view.py
tests/: test_utils.py  test_view.py
